--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
+   box-sizing: border-box;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: sans-serif; 
 }
 header {
     display: flex;
@@ -12,7 +13,7 @@ h2{
     margin: 20px;
     color: white;
 }
-.clickBtn{
+header button{
     margin: 15px 40px;
     padding: 10px 25px;
     background-color: orange;
@@ -21,40 +22,43 @@ h2{
 }
 section{
     margin: 20px auto;
-    height: 40px;
     width: 500px;
+    height: 60px;
     padding: 20px;
     border: 2px solid rgb(216, 207, 207);
     text-align: center;
     border-radius: 10px;
     box-shadow:  0 0 10px 0 rgb(216, 211, 216); 
 }
-form{
+.modal_content{
     margin: auto;
     width: 500px;
     padding: 10px;
-    border: 1px solid rgb(216, 192, 192);
-    background-color: rgb(216, 211, 216);
-}
+} 
 input{
     width: 480px;
     padding: 5px;
+    border: 1px solid rgb(214, 209, 209);
 }
-form > button{
-    position: relative;
-    margin-top: 20px;
-    left: 60%;
+.modal_events{
+
+   display: flex;
+   justify-content: flex-end;
+   padding: 1rem;
 } 
 .btn1{
+    
     padding: 5px 20px;
+    background: white;
     border-color: white;
-    color: blue;   
+    color: blue; 
+    border-radius: 6px;  
 }
 .btn2{
-    padding: 5px 25px;
+    padding: 5px 20px;
     background-color: blue;
     color: white;
-    border-radius: 5px;
+    border-radius: 6px;
 }
 .btn2:hover{ 
     background-color: orange;
@@ -64,16 +68,52 @@ form > button{
 }
 input:focus{
     background-color: rgb(243, 225, 225);
+    outline: none;
 }
-.clickBtn:hover {
+header button:focus,
+header button:hover {
     background-color: rgb(241, 205, 137);
     outline: none;
 }
-.clickBtn:focus {
-    outline: none;
-}
-
-form{
-   display: none;
-}
-
+#backend {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 10;
+    pointer-events: none;
+    display: none;
+  }
+  #backend.visible {
+    display: block;
+    pointer-events: all;
+  }
+  #add-modal .modal__content {
+    display: flex;
+    flex-direction: column;
+  }
+  .modal {
+    position: fixed;
+    z-index: 100;
+    background: white;
+    border-radius: 10px;
+    width: 80%;
+    top: 30vh;
+    left: 10%;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    display: none;
+  }
+  .modal.visible {
+    display: block;
+    animation: fade-slide-in 0.3s ease-out forwards;
+  }
+  /* .modal .modal__title {
+    margin: 0;
+    padding: 1rem;
+    border-bottom: 1px solid #00329e;
+    background: #00329e;
+    color: white;
+    border-radius: 10px 10px 0 0;
+  } */
