--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,8 @@ header button:hover {
     z-index: 100;
     background: white;
     border-radius: 10px;
-    width: 80%;
     top: 30vh;
-    left: 10%;
+    left: 32%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     display: none;
   }
@@ -109,11 +108,11 @@ header button:hover {
     display: block;
     animation: fade-slide-in 0.3s ease-out forwards;
   }
-  /* .modal .modal__title {
+  .modal .modal__title {
     margin: 0;
     padding: 1rem;
     border-bottom: 1px solid #00329e;
     background: #00329e;
     color: white;
     border-radius: 10px 10px 0 0;
-  } */
+  }
